<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    android:layout_marginBottom="12dp"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:background="@drawable/image_border"
        android:contentDescription="@string/movie_poster_desc"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_year"
            android:textSize="14sp"
            android:textColor="@color/textSecondary"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/movie_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_studio"
            android:textSize="14sp"
            android:textColor="@color/textSecondary"/>
    </LinearLayout>
</LinearLayout>